tests/success/FoldingBinop.rs
fn manyBinops(n: i32) -> bool {
    let mut x: bool = true;
    x = x && (n > 0);

    return x;
}

let mut x: bool = manyBinops(10);