tests/fail/returnRef.rs
fn get_reference() -> &String {
    let s : String = "hello";

    return &s;
}

get_reference();